generate stellarium.pot + tiny fix for shaders logger

--- a/src/gui/shortcutsDialog.ui
+++ b/src/gui/shortcutsDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>656</width>
-    <height>438</height>
+    <width>654</width>
+    <height>436</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -66,7 +66,7 @@
       <item>
        <widget class="QLabel" name="stelWindowTitle">
         <property name="text">
-         <string>EditShortcuts</string>
+         <string>Shortcuts Editor</string>
         </property>
        </widget>
       </item>
