--- a/src/gui/configurationDialog.ui
+++ b/src/gui/configurationDialog.ui
@@ -417,7 +417,7 @@
                 <string>Visual magnitude</string>
                </property>
                <attribute name="buttonGroup">
-                <string>buttonGroupDisplayedFields</string>
+                <string notr="true">buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
@@ -430,7 +430,7 @@
                 <string>Size</string>
                </property>
                <attribute name="buttonGroup">
-                <string>buttonGroupDisplayedFields</string>
+                <string notr="true">buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
@@ -440,7 +440,7 @@
                 <string>Additional information 3</string>
                </property>
                <attribute name="buttonGroup">
-                <string>buttonGroupDisplayedFields</string>
+                <string notr="true">buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
@@ -453,7 +453,7 @@
                 <string>Additional information 2</string>
                </property>
                <attribute name="buttonGroup">
-                <string>buttonGroupDisplayedFields</string>
+                <string notr="true">buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
@@ -463,7 +463,7 @@
                 <string>Absolute magnitude</string>
                </property>
                <attribute name="buttonGroup">
-                <string>buttonGroupDisplayedFields</string>
+                <string notr="true">buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
