--- a/util/locations-editor/LocationListEditor.ui
+++ b/util/locations-editor/LocationListEditor.ui
@@ -78,10 +78,13 @@
     <property name="title">
      <string>&amp;Edit</string>
     </property>
-    <addaction name="actionNewLocation"/>
-    <addaction name="action_Clone_selected"/>
+    <addaction name="actionAddNew"/>
+    <addaction name="actionInsertAfter"/>
+    <addaction name="actionInsertBefore"/>
+    <addaction name="actionCloneSelected"/>
     <addaction name="separator"/>
     <addaction name="actionDelete"/>
+    <addaction name="separator"/>
    </widget>
    <addaction name="menuLocations"/>
    <addaction name="menuEdit"/>
@@ -92,15 +95,24 @@
    <property name="text">
     <string>Open &amp;current project locations</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+O, P</string>
+   </property>
   </action>
   <action name="actionOpenUser">
    <property name="text">
     <string>Open current &amp;user locations</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+O, U</string>
+   </property>
   </action>
   <action name="actionOpenFile">
    <property name="text">
     <string>&amp;Open locations file...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+O, F</string>
    </property>
   </action>
   <action name="actionSave">
@@ -127,50 +139,23 @@
     <string>Ctrl+Q</string>
    </property>
   </action>
-  <action name="actionNewLocation">
+  <action name="actionAddNew">
    <property name="text">
-    <string>&amp;New location</string>
-   </property>
-   <property name="iconText">
-    <string>Insert a new location</string>
-   </property>
-   <property name="toolTip">
-    <string>Insert a new location</string>
+    <string>Add &amp;new location</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+N</string>
    </property>
   </action>
-  <action name="actionCut">
-   <property name="text">
-    <string>Cu&amp;t</string>
-   </property>
-   <property name="toolTip">
-    <string>Cut </string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+X</string>
-   </property>
-  </action>
-  <action name="actionCopy">
-   <property name="text">
-    <string>&amp;Copy</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+C</string>
-   </property>
-  </action>
-  <action name="actionPaste">
-   <property name="text">
-    <string>&amp;Paste</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+V</string>
-   </property>
-  </action>
   <action name="actionDelete">
    <property name="text">
     <string>&amp;Delete</string>
+   </property>
+   <property name="toolTip">
+    <string>Delete the selected location(s)</string>
+   </property>
+   <property name="statusTip">
+    <string>Delete the selected location(s)</string>
    </property>
    <property name="shortcut">
     <string>Del</string>
@@ -188,65 +173,22 @@
    <property name="text">
     <string>Also save as a &amp;binary file</string>
    </property>
-  </action>
-  <action name="actionShowName">
-   <property name="checkable">
-    <bool>true</bool>
-   </property>
-   <property name="text">
-    <string>&amp;Name</string>
-   </property>
    <property name="toolTip">
-    <string>Show the Name column</string>
+    <string>Also save the list as a compressed .bin.gz file</string>
+   </property>
+   <property name="statusTip">
+    <string>Also save the list as a compressed .bin.gz file</string>
    </property>
   </action>
-  <action name="actionShowRegion">
-   <property name="checkable">
-    <bool>true</bool>
-   </property>
-   <property name="text">
-    <string>&amp;Region</string>
-   </property>
-   <property name="toolTip">
-    <string>Toggle the Region column</string>
-   </property>
-  </action>
-  <action name="actionShowCountry">
-   <property name="checkable">
-    <bool>true</bool>
-   </property>
-   <property name="text">
-    <string>&amp;Country</string>
-   </property>
-   <property name="toolTip">
-    <string>Toggle the Country column</string>
-   </property>
-  </action>
-  <action name="actionShowType">
-   <property name="checkable">
-    <bool>true</bool>
-   </property>
-   <property name="text">
-    <string>&amp;Type</string>
-   </property>
-   <property name="toolTip">
-    <string>Toggle the Type column</string>
-   </property>
-  </action>
-  <action name="actionShowPopulation">
-   <property name="checkable">
-    <bool>true</bool>
-   </property>
-   <property name="text">
-    <string>&amp;Population</string>
-   </property>
-   <property name="toolTip">
-    <string>Show the Population column</string>
-   </property>
-  </action>
-  <action name="action_Clone_selected">
+  <action name="actionCloneSelected">
    <property name="text">
     <string>&amp;Clone selected</string>
+   </property>
+   <property name="toolTip">
+    <string>Clone the selected location(s)</string>
+   </property>
+   <property name="statusTip">
+    <string>Clone the selected location(s)</string>
    </property>
   </action>
   <action name="actionNativeEolChars">
@@ -255,6 +197,40 @@
    </property>
    <property name="text">
     <string>Use native line endings</string>
+   </property>
+   <property name="toolTip">
+    <string>Save the list with Windows line endings on Windows</string>
+   </property>
+   <property name="statusTip">
+    <string>Save the list with Windows line endings on Windows</string>
+   </property>
+  </action>
+  <action name="actionInsertAfter">
+   <property name="text">
+    <string>Insert &amp;after</string>
+   </property>
+   <property name="toolTip">
+    <string>Insert a new location after the current location</string>
+   </property>
+   <property name="statusTip">
+    <string>Insert a new location after the current location</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+I, A</string>
+   </property>
+  </action>
+  <action name="actionInsertBefore">
+   <property name="text">
+    <string>Insert &amp;before</string>
+   </property>
+   <property name="toolTip">
+    <string>Insert a new location before the current location</string>
+   </property>
+   <property name="statusTip">
+    <string>Insert a new location before the current location</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+I, B</string>
    </property>
   </action>
  </widget>
