--- a/data/gui/nightStyle.css
+++ b/data/gui/nightStyle.css
@@ -748,6 +748,18 @@ QListView#listViewVoResources {
 	font-size: 12px;
 }
 
+QTreeView::branch:has-children:!has-siblings:closed,
+QTreeView::branch:closed:has-children:has-siblings {
+         border-image: none;
+         image: url(:/graphicGui/nv_spinright.png);
+}
+
+QTreeView::branch:open:has-children:!has-siblings,
+QTreeView::branch:open:has-children:has-siblings  {
+         border-image: none;
+         image: url(:/graphicGui/nv_spindown.png);
+ }
+
 QDateEdit {
 	padding-right: 20px; /* make room for the arrows */
 	background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 rgb(48, 0, 0), stop: 1 rgb(28, 0, 0));
