--- a/src/gui/shortcutsDialog.ui
+++ b/src/gui/shortcutsDialog.ui
@@ -117,12 +117,18 @@
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
+      <property name="spacing">
+       <number>0</number>
+      </property>
       <property name="margin">
        <number>0</number>
       </property>
       <item>
        <widget class="QTreeView" name="shortcutsTreeView">
         <property name="uniformRowHeights">
+         <bool>true</bool>
+        </property>
+        <property name="sortingEnabled">
          <bool>true</bool>
         </property>
         <property name="allColumnsShowFocus">
@@ -135,12 +141,15 @@
          <number>100</number>
         </attribute>
         <attribute name="headerShowSortIndicator" stdset="0">
-         <bool>false</bool>
+         <bool>true</bool>
         </attribute>
         <attribute name="headerStretchLastSection">
          <bool>true</bool>
         </attribute>
        </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEditSearch"/>
       </item>
       <item>
        <widget class="QFrame" name="editFrame">
@@ -154,9 +163,6 @@
          <property name="leftMargin">
           <number>9</number>
          </property>
-         <property name="topMargin">
-          <number>1</number>
-         </property>
          <property name="rightMargin">
           <number>9</number>
          </property>
@@ -166,7 +172,7 @@
          <item row="1" column="0">
           <widget class="QLabel" name="primaryLabel">
            <property name="text">
-            <string>Edit Primary Shortcut</string>
+            <string extracomment="Reused from the view widget!">Primary shortcut</string>
            </property>
           </widget>
          </item>
@@ -180,7 +186,7 @@
          <item row="2" column="0">
           <widget class="QLabel" name="altLabel">
            <property name="text">
-            <string>Edit Alternative Shortcut</string>
+            <string extracomment="Reused from the view widget!">Alternative shortcut</string>
            </property>
           </widget>
          </item>
@@ -196,62 +202,12 @@
            <property name="enabled">
             <bool>false</bool>
            </property>
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>27</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="../../data/gui/guiRes.qrc">
-             <normaloff>:/graphicGui/backspace.png</normaloff>:/graphicGui/backspace.png</iconset>
-           </property>
-           <property name="iconSize">
-            <size>
-             <width>32</width>
-             <height>20</height>
-            </size>
-           </property>
           </widget>
          </item>
          <item row="1" column="2">
           <widget class="QPushButton" name="primaryBackspaceButton">
            <property name="enabled">
             <bool>false</bool>
-           </property>
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>27</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="../../data/gui/guiRes.qrc">
-             <normaloff>:/graphicGui/backspace.png</normaloff>:/graphicGui/backspace.png</iconset>
-           </property>
-           <property name="iconSize">
-            <size>
-             <width>32</width>
-             <height>20</height>
-            </size>
            </property>
           </widget>
          </item>
@@ -296,9 +252,7 @@
    </slots>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="../../data/gui/guiRes.qrc"/>
- </resources>
+ <resources/>
  <connections>
   <connection>
    <sender>closeStelWindow</sender>
