--- a/plugins/Exoplanets/src/gui/exoplanetsDialog.ui
+++ b/plugins/Exoplanets/src/gui/exoplanetsDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>530</width>
-    <height>483</height>
+    <width>528</width>
+    <height>459</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -222,6 +222,25 @@
              </widget>
             </item>
            </layout>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="displayBox">
+         <property name="title">
+          <string>Display mode for exoplanets</string>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout">
+          <item>
+           <widget class="QCheckBox" name="displayModeCheckBox">
+            <property name="toolTip">
+             <string>Plot all systems with exoplanets without labels</string>
+            </property>
+            <property name="text">
+             <string>Enable display of distribution for exoplanets</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
