--- a/src/gui/viewDialog.ui
+++ b/src/gui/viewDialog.ui
@@ -6,6 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
+    <width>488</width>
+    <height>481</height>
    </rect>
   </property>
   <property name="font">
@@ -326,7 +328,7 @@
       <item>
        <widget class="QStackedWidget" name="stackedWidget">
         <property name="currentIndex">
-         <number>1</number>
+         <number>0</number>
         </property>
         <widget class="QWidget" name="page">
          <layout class="QGridLayout" name="gridLayout">
@@ -948,14 +950,14 @@
                    <item>
                     <widget class="QRadioButton" name="zhrNone">
                      <property name="text">
-                      <string>0</string>
+                      <string notr="true">0</string>
                      </property>
                     </widget>
                    </item>
                    <item>
                     <widget class="QRadioButton" name="zhr10">
                      <property name="text">
-                      <string>10</string>
+                      <string notr="true">10</string>
                      </property>
                      <property name="checked">
                       <bool>true</bool>
@@ -965,21 +967,21 @@
                    <item>
                     <widget class="QRadioButton" name="zhr80">
                      <property name="text">
-                      <string>80</string>
+                      <string notr="true">80</string>
                      </property>
                     </widget>
                    </item>
                    <item>
                     <widget class="QRadioButton" name="zhr10000">
                      <property name="text">
-                      <string>10000</string>
+                      <string notr="true">10000</string>
                      </property>
                     </widget>
                    </item>
                    <item>
                     <widget class="QRadioButton" name="zhr144000">
                      <property name="text">
-                      <string>144000</string>
+                      <string notr="true">144000</string>
                      </property>
                     </widget>
                    </item>
