refactored GUI and code for DeltaT management

--- a/data/gui/normalStyle.css
+++ b/data/gui/normalStyle.css
@@ -166,6 +166,12 @@ QTextBrowser#helpBrowser,QTextBrowser#aboutBrowser {
 	padding-left:11px;
 }
 
+QTextBrowser#deltaTAlgorithmDescription {
+        background: transparent;
+        padding: 0px;
+        margin: 0px;
+}
+
 /***************************************************SearchDialog********************************************************/
 
 QFrame#horizontalSearchLayout {
