--- a/src/gui/configurationDialog.ui
+++ b/src/gui/configurationDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>509</width>
-    <height>473</height>
+    <width>505</width>
+    <height>469</height>
    </rect>
   </property>
   <layout class="QVBoxLayout">
@@ -809,27 +809,27 @@
                  <widget class="QComboBox" name="deltaTAlgorithmComboBox"/>
                 </item>
                 <item>
-                 <widget class="QLabel" name="deltaTAlgorithmDescription">
-                  <property name="text">
-                   <string/>
+                 <widget class="QTextBrowser" name="deltaTAlgorithmDescription">
+                  <property name="autoFillBackground">
+                   <bool>true</bool>
                   </property>
                  </widget>
                 </item>
+                <item>
+                 <spacer name="verticalSpacer">
+                  <property name="orientation">
+                   <enum>Qt::Vertical</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>20</width>
+                    <height>40</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
                </layout>
               </widget>
-             </item>
-             <item>
-              <spacer name="horizontalSpacer_2">
-               <property name="orientation">
-                <enum>Qt::Horizontal</enum>
-               </property>
-               <property name="sizeHint" stdset="0">
-                <size>
-                 <width>40</width>
-                 <height>20</height>
-                </size>
-               </property>
-              </spacer>
              </item>
             </layout>
            </widget>
