--- a/src/gui/configurationDialog.ui
+++ b/src/gui/configurationDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>501</width>
-    <height>465</height>
+    <width>497</width>
+    <height>461</height>
    </rect>
   </property>
   <layout class="QVBoxLayout">
@@ -769,7 +769,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QGroupBox" name="groupBox_9">
+           <widget class="QGroupBox" name="deltaTGroupBox">
             <property name="title">
              <string>Time correction</string>
             </property>
